# technopark_game

./: .gitignore  AttackTransmit.h  CMakeLists.txt  Object.h  Player.h  README.md  main.cpp  mk  mk1  prog
back/: CMakeLists.txt
back/project/include/: Object.h  PlayerHandlers.h  block.h  defaultBlock.h  endBlock.h  game_class.h  handler.h  map_class.h  message.h  objects.h  player.h  player_class.h
back/project/src/: game_class.cpp  main.cpp  map_class.cpp  player_class.cpp
back/project/tests/: test_map.cpp
blocks/EdgeBlocks/: EdgeBlocks.h
client/: Clien.h  client  client.cpp  main_client  main_client.cpp
client io/: CMakeLists.txt
client io/include/: Application.h  Block.h  GameState.h  MenuState.h  Object.h  Player.h  State.h  Unit.h
client io/src/: Application.cpp  Block.cpp  GameState.cpp  Map.cpp  MenuState.cpp  Player.cpp  PreparationState.cpp  State.cpp  StateStack.cpp  Unit.cpp
diagram/: back (1) (1) (1).drawio
graphics/: CMakeLists.txt
graphics/include/: Application.h  Block.h  ClientConnectState.h  ContextPreparation.h  DrawHandlers.cpp  DrawHandlers.h  EndState.h  EventManager.cpp  EventManager.h  GameState.h  Handler.h  Heart.h  InputPlayer.h  Map.h  MenuState.h  Object.h  PreparationHandlers.h  PreparationState.h  State.h  StateIdentifiers.h  StateStack.h  Text.h  TextField.h  Unit.h
graphics/src/: Application.cpp  Block.cpp  ClientConnectState.cpp  ClientConnectState.h  ContextPreparation.cpp  DrawHandlers.cpp  EndState.cpp  GameState.cpp  Heart.cpp  InputPlayer.cpp  Map.cpp  MenuState.cpp  PreparationState.cpp  State.cpp  StateStack.cpp  Text.cpp  TextField.cpp  Unit.cpp  main.cpp
graphics/tests/: input_test.cpp  resouces_test.cpp
handler/: handler.h
include/: Application.h  Block.h  DrawHandlers.h  EventManager.h  GameState.h  Heart.cpp  InputPlayer.h  Map.h  MenuState.h  Object.h  Player.h  PreparationState.h  State.h  StateIdentifiers.h  StateStack.h  Unit.h
message/: message.h
move/: move.cpp  move.h  moveTransmit.h
project/: CMakeLists.txt
project/connectingClient/: CMakeLists.txt
project/connectingClient/include/: clientNetwork.h  game.h
project/connectingClient/src/: client.cpp  clientNetwork.cpp  game.cpp
project/hostPlayer/: CMakeLists.txt
project/hostPlayer/include/: Object.h  PlayerHandlers.h  defaultBlock.h  endBlock.h  factory.h  game_class.h  handler.h  healingPotion.h  map_class.h  player_class.h
project/hostPlayer/server/: CMakeLists.txt  connection.cpp  connection.h  request.h  router.h  server.cpp  server.h
project/hostPlayer/src/: game_class.cpp  main.cpp  map_class.cpp
project/include/: Object.h  PlayerHandlers.h  defaultBlock.h  endBlock.h  factory.h  game_class.h  map_class.h  message.h  player_class.h
project/src/: client.cpp  game_class.cpp  main.cpp  map_class.cpp
project/tests/: test_map.cpp
server/: CMakeLists.txt  Serv.cpp  Serv.h  client.cpp  connection.cpp  main  main.cpp  message.h  response.h  server.cpp  server.h
src/: Application.cpp  Block.cpp  GameState.cpp  Map.cpp  MenuState.cpp  Player.cpp  PreparationState.cpp  State.cpp  StateStack.cpp  Unit.cpp
tests/: input_test.cpp  resouces_test.cpp
uml diagram/: Last  confing_file  uml
